# mcp

./: README.md
src/amazon-mq-mcp-server/tests/: test_aws_service_mcp_generator.py
src/amazon-sns-sqs-mcp-server/: README.md  print_tools.py  pyproject.toml
src/amazon-sns-sqs-mcp-server/awslabs/amazon_sns_sqs_mcp_server/: __init__.py  common.py  consts.py  generator.py  server.py  sns.py  sqs.py
src/amazon-sns-sqs-mcp-server/tests/: test_common.py  test_generator.py  test_server.py  test_sns.py  test_sqs.py
src/aws-service-mcp-generator/: README.md  __init__.py  pyproject.toml
src/aws-service-mcp-generator/awslabs/: __init__.py
src/aws-service-mcp-generator/awslabs/aws_service_mcp_generator/: __init__.py  generator.py
src/aws-service-mcp-generator/tests/: test_generator.py
