[project]
name = "aws_service_mcp_generator"
version = "2.0.1"
description = "A Python class that generates MCP server for any AWS service which has boto3 client"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ken Liao, Hashim Abusharkh", email = "kenliao94@gmail.com"},
]
maintainers = [
    {name = "Ken Liao, Hashim Abusharkh", email = "kenliao94@gmail.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.37.23",
    "botocore>=1.37.23",
    "fastmcp>=2.2.5",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "Q"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
